добавил шрифты и подготовил проект для верстки

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,3 +1,8 @@
-h1 {
-  color: red;
-}
+
+@import "fonts";
+@import "normalize";
+@import "global";
+@import "variables";
+@import "mixins";
+
+@import "blocks/header";
