--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -51,7 +51,7 @@
   display: flex;
   max-width: 960px;
   justify-content: space-between;
-  align-items: center; //
+  align-items: center;
   flex-grow: 1;
 }
 
@@ -63,7 +63,7 @@
   text-align: right;
   align-items: flex-end;
   padding-top: 115px;
-  margin-right: 10px; //
+  margin-right: 10px;
 
   &-list {
     position: absolute;
@@ -96,7 +96,7 @@
 
   margin: 0;
   margin-bottom: 62px;
-  padding-left: 75px; //
+  padding-left: 75px;
   letter-spacing: 0.03em;
   color: $white;
 }
@@ -116,12 +116,14 @@
 }
 
 .header__image-box {
-  max-height: 556px;
+
+  & picture {
+    display: flex;
+  }
 }
 
-.header__img { //
+.header__img {
   width: 100%;
-
 }
 
 .header__social {
@@ -129,7 +131,7 @@
   flex-direction: column;
   justify-content: flex-end;
   margin-left: auto;
-  padding-left: 5px; //
+  padding-left: 5px;
 
   &-list {
     list-style: none;
