блок тренажерный зал, адаптив и пп

--- a/source/sass/blocks/lesson.scss
+++ b/source/sass/blocks/lesson.scss
@@ -1,7 +1,7 @@
 .lesson {
   width: 50%;
   min-height: 337px;
-  background-color: $lesson-bg;
+  background-color: $blue;
 }
 .lesson__wrapper {
   // outline: 1px solid red;
