--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -1,13 +1,13 @@
 //fonts
 
 $bebas: "BebasNeueRegular";
-//$bebasBold: "BebasNeue_bold";
 $roboto: "Roboto_Condensed";
+$robotoLight: "Roboto_Condensed_Light";
 $robotoBold: "Roboto_Condensed_Bold";
 
 // widths
 
-$desktop-width: 1024px;
+$desktop-width: 1023px;
 $tablet-width: 767px;
 
 
@@ -16,7 +16,7 @@ $tablet-width: 767px;
 $white: #ffffff;
 $darkblue: #102654;
 $footer-bg: #030a1a;
-$lesson-bg: #102654;
+$blue: #102654;
 $blue-brd: #74819c;
 
 // retina
