--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -8,6 +8,7 @@
 // header
 @import "blocks/header";
 // sections
+@import "blocks/gym";
 @import "blocks/additional";
 // footer
 @import "blocks/footer";
