--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -9,6 +9,8 @@
 @import "blocks/header";
 // sections
 @import "blocks/gym";
+@import "blocks/competition";
+@import "blocks/coach";
 @import "blocks/additional";
 // footer
 @import "blocks/footer";
