--- a/source/sass/blocks/nav.scss
+++ b/source/sass/blocks/nav.scss
@@ -46,13 +46,6 @@
     margin-right: 0;
   }
 
-  .nav__item--logo {
-    display: block;
-
-    @include font ($font: $bebas, $size: 20px, $height: 20px);
-    letter-spacing: 0.02em;
-  }
-
   .nav__item {
     order: 4;
     margin-bottom: 20px;
@@ -61,13 +54,10 @@
       padding-left: 15px;
     }
 
-    &--logo {
-      order: 1;
-    }
-
     &--sale {
       order: 1;
       padding-left: 15px;
+      margin-left: 50%;
     }
 
     &--service {
