блоки преимущества, акции

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -11,6 +11,10 @@
 @import "blocks/gym";
 @import "blocks/competition";
 @import "blocks/coach";
+@import "blocks/advantages";
+@import "blocks/offer";
+@import "blocks/main-offer";
+@import "blocks/feedback";
 @import "blocks/additional";
 // footer
 @import "blocks/footer";
