--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -14,11 +14,15 @@ $tablet-width: 767px;
 // colors
 
 $white: #ffffff;
+$lightblue: #1c3374;
 $darkblue: #102654;
 $footer-bg: #030a1a;
 $blue: #102654;
 $blue-brd: #74819c;
 $grey: #b6bdcc;
+$red: #ed0233;
+$lightgrey: #f8f9fc;
+$violet: #2e35ac;
 
 // retina
 
