--- a/source/sass/blocks/coach.scss
+++ b/source/sass/blocks/coach.scss
@@ -21,6 +21,8 @@
   margin: 0;
   padding: 0;
 
+  //outline: 1px solid red;
+
   &::before {
     position: absolute;
     top: 50%;
@@ -165,18 +167,25 @@
   .coach__title {
     @include font ($font: $bebas, $size: 42px, $height: 42px);
 
-    margin-bottom: 45px;
+    margin-bottom: 43px;
+  }
+
+  .coach__list {
+    min-width: 566px;
   }
 
   .coach__item {
     width: 50%;
-    margin-right: 30px;
+    max-width: 268px;
 
     &:nth-child(2n) {
       margin: 0;
     }
   }
 
+  .coach__img {
+    width: 268px;
+  }
 
   .hidden {  //temp для лишек пока нет js
     display: none;
@@ -191,13 +200,44 @@
   }
 
   .coach__list {
+    min-width: 226px;
     outline: 1px solid red;
 
+    &::before {
+      width: 10px;
+      height: 19px;
+      background-size: 100%;
+      left: -32px;
+    }
+
+    &::after {
+      width: 10px;
+      height: 19px;
+      background-size: 100%;
+      right: -32px;
+    }
   }
 
   .coach__item {
-    width: 100%;
+    width: 226px;
     margin-right: 0;
+    max-width: 226px;
+    height: 274px
+  }
+
+  .coach__img {
+    width: 226px;
+    height: 274px;
+  }
+
+  .coach__title {
+    @include font ($font: $bebas, $size: 32px, $height: 32px);
+
+    margin-bottom: 45px;
+  }
+
+  .coach__advantages-item {
+
   }
 
   .tablet-hidden { // temp для лишки пока нет js
