--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -7,7 +7,7 @@ $robotoBold: "Roboto_Condensed_Bold";
 
 // widths
 
-$desktop-width: 1023px;
+$desktop-width: 1199px;
 $tablet-width: 767px;
 
 
@@ -22,8 +22,11 @@ $blue-brd: #74819c;
 $grey: #b6bdcc;
 $red: #ed0233;
 $lightgrey: #f8f9fc;
+$specialgrey: #e8e8e8;
 $violet: #2e35ac;
-
+$pink:  #d10a42;
+$lightblack: #495a7d;
+$price: #103aae;
 // retina
 
 $retina-dpi: 144dpi;
