--- a/source/sass/blocks/offer.scss
+++ b/source/sass/blocks/offer.scss
@@ -1,7 +1,8 @@
 .offer__wrapper {
   @include container();
 
-  padding: 120px 100px 0;
+  max-width: 1160px;
+  padding: 120px 0;
   display: flex;
   flex-direction: column;
   align-items: center;
