--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -9,6 +9,7 @@
 @import "blocks/header";
 // sections
 @import "blocks/gym";
+@import "blocks/subscription";
 @import "blocks/competition";
 @import "blocks/coach";
 @import "blocks/advantages";
