--- a/source/sass/mixins.scss
+++ b/source/sass/mixins.scss
@@ -5,14 +5,10 @@
 }
 
 @mixin container() {
-  max-width: 1360px;
+  max-width: 1200px;
   margin: 0 auto;
 
-  /*@media (max-width: $desktop-width) {
-    max-width: px;
-  }*/
-
-  /*@media (max-width: $tablet-width) {
-    max-width: 767px;
-  }*/
+  @media (max-width: $tablet-width) {
+    min-width: 320px;
+  }
 }
