--- a/source/sass/blocks/subscription.scss
+++ b/source/sass/blocks/subscription.scss
@@ -1,23 +1,6 @@
 .subscription {
   position: relative;
   background-color: $lightgrey;
-
-  &:after {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    width: 321px;
-    height: 384px;
-
-    content: "";
-    background-image: url("../img/kettle1x.jpg");
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
-
-    @media (min-resolution: $retina-dppx) and (min-resolution: $retina-dpi) {
-      background-image: url("../img/kettle2x.png");
-    }
-  }
 }
 
 .subscription__wrapper {
@@ -39,18 +22,16 @@
 }
 
 .subscription__toggle-box {
-  margin-bottom: 29px;
+  margin-bottom: 38px;
 }
 
 .subscription__toggle-list {
   display: flex;
   flex-wrap: wrap;
-  // width: 340px;
   list-style: none;
   margin: 0;
-  margin-bottom: 20px;
+  margin-bottom: 11px;
   padding: 0;
-  border-bottom: 2px solid rgba(120, 120, 120, 0.2); // временно пока нет шкалы
 }
 
 .subscription__toggle-link {
@@ -69,6 +50,22 @@
   margin-right: 0;
 }
 
+.subscription__toggle-line {
+  position: relative;
+  width: 100%;
+  height: 2px;
+  background-color: rgba(120, 120, 120, 0.2);
+}
+
+.subscription__toggle-pin {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 67px;
+  height: 100%;
+  background-color: $pink;
+}
+
 .subscription__list {
   width: 100%;
   max-width: 1160px;
@@ -77,7 +74,6 @@
   list-style: none;
   margin: 0;
   padding: 0;
-  outline: 1px solid red;
 }
 
 .subscription__item {
@@ -89,22 +85,22 @@
   max-width: 360px;
   min-height: 448px;
   margin-right: auto;
+  background-color: $white;
 
   &:last-child {
     margin-right: 0;
   }
 
-  /*transition: all 0.3s 0.1s;
-
-
- // hover на ссылку или лишку
+  &:hover,
+  &:focus {
     background-image: url("../img/subscription-brd1x.png");
     background-size: 100% 100%;
     background-repeat: no-repeat;
 
     @media (min-resolution: $retina-dppx) and (min-resolution: $retina-dpi) {
       background-image: url("../img/subscription-brd2x.png");
-    }*/
+    }
+  }
 }
 
 .subscription__box {
@@ -146,19 +142,25 @@
   opacity: 0.48;
   color: $specialgrey;
 
-  z-index: 0;
-
   &-before {
-    @include font($font: $robotoBold, $size: 60px, $height: 90px);
-
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    max-width: 166px;
     position: absolute;
     bottom: 50%;
     left: 50%;
-    transform: translate(-67.5%, 62.5%);
-    color: $price;
-
-    z-index: 1;
+    transform: translate(-50%, 62.5%);
   }
+}
+
+.subscription__small-price {
+  @include font($font: $robotoBold, $size: 60px, $height: 90px);
+
+  margin-right: auto;
+  color: $price;
 }
 
 .subscription__btn {
@@ -174,4 +176,113 @@
   text-align: center;
   padding: 25px 10px;
   color: $darkblue;
+
+  &:hover,
+  &:focus {
+    background: linear-gradient(111.72deg, #ED0233 17.6%, #003EB7 95.31%);
+    color: $white;
+  }
+}
+
+@media (max-width: $desktop-width) {
+  .subscription__wrapper {
+    padding-top: 97px;
+    padding-bottom: 98px;
+  }
+
+  .subscription__title {
+    font-size: 42px;
+    line-height: 42px;
+    margin-bottom: 32px;
+  }
+
+  .subscription__toggle-box {
+    min-width: 332px;
+    margin-bottom: 45px;
+  }
+
+  .subscription__toggle-link {
+    font-size: 18px;
+    line-height: 27px;
+    margin-right: 55px;
+  }
+
+  .subscription__toggle-pin {
+    width: 60px;
+  }
+
+  .subscription__list {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .subscription__item {
+    max-width: 442px;
+    margin-right: 0;
+    margin-bottom: 40px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+}
+
+@media (max-width: $tablet-width) {
+  .subscription__wrapper {
+    padding: 66px 15px;
+
+  }
+
+  .subscription__title {
+    font-size: 32px;
+    line-height: 32px;
+    margin-bottom: 25px;
+  }
+
+  .subscription__toggle-box {
+    min-width: 290px;
+    margin-bottom: 35px;
+  }
+
+  .subscription__toggle-link {
+    margin-right: 45px;
+  }
+
+  .subscription__toggle-link {
+    font-size: 16px;
+    line-height: 24px;
+  }
+
+  .subscription__price {
+    font-size: 80px;
+    line-height: 120px;
+    margin-bottom: 23px;
+
+    &-before {
+      max-width: 132px;
+      //transform: translate(-50%,57%);
+    }
+  }
+
+  .subscription__small-price {
+    font-size: 48px;
+    line-height: 72px;
+  }
+
+  .subscription__rubble {
+    width: 24px;
+    height: 33px;
+  }
+
+  .subscription__name {
+    font-size: 22px;
+    line-height: 24px;
+  }
+
+  .subscription__item {
+    min-width: 290px;
+    min-height: 384px;
+    margin-bottom: 35px;
+    padding-top: 38px;
+  }
 }
