--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -10,7 +10,7 @@
 // sections
 @import "blocks/gym";
 @import "blocks/subscription";
-@import "blocks/competition";
+@import "blocks/promo";
 @import "blocks/coach";
 @import "blocks/advantages";
 @import "blocks/offer";
