--- a/source/sass/blocks/coach.scss
+++ b/source/sass/blocks/coach.scss
@@ -2,7 +2,7 @@
   @include container();
 
   max-width: 1290px;
-  padding: 100px 65px;
+  padding: 112px 65px 120px;
 }
 
 .coach__title {
@@ -11,6 +11,7 @@
   letter-spacing: 0.03em;
   margin: 0;
   margin-bottom: 55px;
+  margin-left: 3px;
   color: $blue;
 }
 
@@ -21,8 +22,6 @@
   list-style: none;
   margin: 0;
   padding: 0;
-
-  //outline: 1px solid red;
 
   &::before {
     position: absolute;
@@ -163,12 +162,15 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding-top: 93px;
+    padding-bottom: 100px;
   }
 
   .coach__title {
     @include font ($font: $bebas, $size: 42px, $height: 42px);
 
     margin-bottom: 43px;
+    margin-left: 0;
   }
 
   .coach__list {
@@ -195,14 +197,11 @@
 
 @media(max-width: $tablet-width) {
   .coach__wrapper {
-    padding: 140px 45px;
-
-    outline: 1px solid red;
+    padding: 67px 45px 40px;
   }
 
   .coach__list {
     min-width: 226px;
-    outline: 1px solid red;
 
     &::before {
       width: 10px;
