--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -7,7 +7,7 @@
   @include container();
 
   display: flex;
-  padding: 40px 100px;
+  padding: 42px 20px;
   min-height: 108px;
 }
 
@@ -21,7 +21,7 @@
 
 .footer__navbar {
   margin: 0 auto;
-  margin-top: 4px;
+  margin-top: 3px;
 }
 
 .footer__social {
@@ -42,6 +42,20 @@
       margin-right: 0;
     }
   }
+}
+
+.footer__social svg {
+  fill: $white;
+  transition: fill 0.3s 0.1s;
+}
+
+.footer__social-link:hover svg,
+.footer__social-link:focus svg {
+  fill: $red;
+}
+
+.footer__social-link:active svg {
+  opacity: 0.8;
 }
 
 @media(max-width: $desktop-width) {
@@ -72,8 +86,10 @@
 
   .footer__logo {
     position: absolute;
-    top: 50px;
-    left: 15px;
+    top: 48px;
+    left: 16px;
+    line-height: 20px;
+    font-size: 20px;
   }
 
   .footer__navbar {
