--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,5 +1,5 @@
 .header {
-  min-height: 658px;
+  min-height: 659px;
   background-image: url("../img/bg-header1x.jpg");
   background-size: cover;
   background-position: center;
@@ -13,9 +13,7 @@
 .header__wrapper {
   @include container();
 
-  padding: 32px 20px;
-
-  outline: 1px solid red;
+  padding: 30px 20px;
 }
 
 .header__bar {
@@ -36,12 +34,22 @@
   text-decoration: none;
   letter-spacing: 0.03em;
   color: $white;
+
+  transition: color 0.3s 0.1s;
+
+  &:hover,
+  &:focus {
+    color: $darkblue;
+  }
+
+  &:active {
+    opacity: 0.8;
+  }
 }
 
 .header__inner {
   display: flex;
-
-  outline: 1px solid black;
+  margin-top: -4px;
 }
 
 .header__content-box {
@@ -56,15 +64,15 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  max-width: 405px;
+  max-width: 396px;
   text-align: right;
   align-items: flex-end;
-  padding-top: 115px;
-  margin-right: 10px;
+  padding-top: 75px;
+  margin-right: auto;
 
   &-list {
     position: absolute;
-    top: 54.6%;
+    top: 55.8%;
     left: 20px;
     list-style: none;
     margin: 0;
@@ -76,6 +84,17 @@
 
     text-decoration: none;
     color: $white;
+
+    transition: color 0.3s 0.1s;
+
+    &:hover,
+    &:focus {
+      color: $red;
+    }
+
+    &:active {
+      opacity: 0.8;
+    }
   }
 }
 
@@ -92,7 +111,7 @@
   @include font($font: $bebas, $size: 109px, $height: 109px);
 
   margin: 0;
-  margin-bottom: 62px;
+  margin-bottom: 60px;
   padding-left: 75px;
   letter-spacing: 0.03em;
   color: $white;
@@ -101,15 +120,23 @@
 .header__btn {
   @include font($font: $robotoBold, $size: 12px, $height: 14px);
 
-  width: 235px;
+  width: 233px;
   min-height: 57px;
-  padding: 20px;
+  padding: 20px 10px 19px;
   border: 4px solid $white;
   text-decoration: none;
   text-align: center;
   letter-spacing: 0.05em;
   text-transform: uppercase;
   color: $white;
+
+  transition: border-color 0.3s 0.1s, color 0.3s 0.1s;
+
+  &:hover,
+  &:focus {
+    color: $red;
+    border-color: $red;
+  }
 }
 
 .header__image-box {
@@ -150,12 +177,39 @@
     text-decoration: none;
     text-transform: uppercase;
     color: $white;
+
+    transition: color 0.3s 0.1s;
+
+    &:hover,
+    &:focus {
+      color: $darkblue;
+    }
+
+    &:active {
+      opacity: 0.8;
+    }
   }
 }
 
 @media (max-width: $desktop-width) {
+  .header {
+    min-height: 554px;
+  }
+
+  .header__wrapper {
+    padding: 38px 45px 0;
+  }
+
+  .header__inner {
+    margin-top: 0;
+  }
+
   .header__social {
     display: none;
+  }
+
+  .header__bar {
+    margin-bottom: 21px;
   }
 
   .header__bar-logo,
@@ -164,18 +218,78 @@
     line-height: 24px;
   }
 
+  .header__content {
+    max-width: 325px;
+    margin-right: auto;
+    padding-top: 30px;
+  }
+
+  .header__content-list {
+    top: 47%;
+    left: 0;
+  }
+
   .header__city {
     font-size: 34px;
     line-height: 34px;
+    margin-bottom: 0;
   }
 
   .header__title {
     font-size: 86px;
     line-height: 86px;
+    margin-bottom: 45px;
   }
 
   .header__btn {
     width: 183px;
     min-height: 57px;
+  }
+}
+
+@media(max-width: $tablet-width) {
+  .header {
+    min-height: 491px;
+  }
+
+  .header__image-box {
+    display: none;
+  }
+
+  .header__wrapper {
+    width: 320px;
+    padding: 18px 15px;
+  }
+
+  .header__content {
+    max-width: 290px;
+    padding-top: 53px;
+  }
+
+  .header__bar-logo,
+  .header__bar-phone {
+    font-size: 20px;
+    line-height: 20px;
+  }
+
+  .header__city {
+    font-size: 28px;
+    line-height: 28px;
+    margin-bottom: 7px;
+  }
+
+  .header__title {
+    font-size: 78px;
+    line-height: 78px;
+    margin-bottom: 47px;
+  }
+
+  .header__content-list {
+    top: 49.3%;
+  }
+
+  .header__btn {
+    width: 100%;
+    min-height: 62px;
   }
 }
