--- a/source/sass/blocks/lesson.scss
+++ b/source/sass/blocks/lesson.scss
@@ -4,20 +4,18 @@
   background-color: $blue;
 }
 .lesson__wrapper {
-  // outline: 1px solid red;
   max-width: 680px;
   height: 100%;
 
   display: flex;
   margin-left: auto;
-  padding-top: 57px;
+  padding-top: 58px;
   padding-right: 5px;
 }
 
 .lesson__content {
   width: 410px;
   min-height: 197px;
-  // outline: 1px solid white;
   margin-right: auto;
   margin-left: 100px;
 }
@@ -26,7 +24,7 @@
   @include font($font: $bebas, $size: 49px, $height: 64px);
 
   margin: 0;
-  letter-spacing: 0.03em;
+  letter-spacing: 0.04em;
   text-transform: lowercase;
   margin-bottom: 35px;
   color: $white;
@@ -47,7 +45,7 @@
   border-radius: 0;
   border-bottom: 1px solid $blue-brd;
   margin-bottom: 28px;
-  padding: 5px 0;
+  padding: 5px;
   cursor: pointer;
   color: $white;
 
@@ -70,6 +68,16 @@
   cursor: pointer;
   background-color: transparent;
   color: $white;
+  transition: opacity 0.2s 0.1s;
+
+  &:hover,
+  &:focus {
+    opacity: 0.7;
+  }
+
+  &:active {
+    opacity: 0.5;
+  }
 }
 
 @media(max-width: $desktop-width) {
