--- a/source/sass/blocks/offer.scss
+++ b/source/sass/blocks/offer.scss
@@ -2,7 +2,7 @@
   @include container();
 
   max-width: 1160px;
-  padding: 120px 0;
+  padding: 116px 0 0;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -90,6 +90,17 @@
     text-transform: uppercase;
     border-bottom: 1px solid $lightblue;
     color: $lightblue;
+
+    transition: opacity 0.2s 0.1s;
+
+    &:hover,
+    &:focus {
+      opacity: 0.7;
+    }
+
+    &:active {
+      opacity: 0.5;
+    }
   }
 }
 
@@ -135,7 +146,7 @@
 @media(max-width: $tablet-width) {
 
   .offer__wrapper {
-    padding: 70px 15px 0;
+    padding: 66px 15px 0;
     width: 320px;
   }
 
