--- a/source/sass/blocks/subscription.scss
+++ b/source/sass/blocks/subscription.scss
@@ -6,7 +6,7 @@
 .subscription__wrapper {
   @include container();
 
-  padding-top: 116px;
+  padding: 116px 20px 120px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -177,11 +177,16 @@
   padding: 25px 10px;
   color: $darkblue;
 
+  transition: color 0.8s 0.1s;
+
+
   &:hover,
   &:focus {
     background: linear-gradient(111.72deg, #ED0233 17.6%, #003EB7 95.31%);
     color: $white;
   }
+
+
 }
 
 @media (max-width: $desktop-width) {
@@ -229,7 +234,7 @@
 
 @media (max-width: $tablet-width) {
   .subscription__wrapper {
-    padding: 66px 15px;
+    padding: 72px 15px 67px;
 
   }
 
