--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -23,27 +23,32 @@
   margin: 0;
   padding: 0;
   background: $lightblue;
-  box-shadow: 0px 0px 40px rgba(28, 51, 116, 0.2);
+  box-shadow: 0 0 40px rgba(28, 51, 116, 0.2);
+}
 
-  &::before,
-  &::after {
-    position: absolute;
-    top: 50%;
-    width: 16px;
-    height: 32px;
-    content: "";
-    cursor: pointer;
-    background-size: 16px 32px;
-    background-repeat: no-repeat;
-    transform: translateY(-50%);
-  }
+.feedback__slider-box {
+  position: relative;
+}
 
-  &::before {
+.feedback__slider-btn {
+  position: absolute;
+  top: 50%;
+  width: 16px;
+  height: 32px;
+  content: "";
+  cursor: pointer;
+  background-size: 16px 32px;
+  background-repeat: no-repeat;
+  transform: translateY(-50%);
+  background-color: transparent;
+  border: none;
+
+  &--previous {
     left: -57px;
     background-image: url("../img/arrow-left.svg");
   }
 
-  &::after {
+  &--next {
     right: -57px;
     background-image: url("../img/arrow-right.svg");
   }
@@ -84,10 +89,17 @@
 }
 
 .feedback__box {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   width: 330px;
 }
 
-@media(max-width: $desktop-width) {
+.feedback__item--hidden {
+  display: none;
+}
+
+@media (max-width: $desktop-width) {
   .feedback__wrapper {
     padding: 57px 45px 100px;
   }
@@ -110,7 +122,8 @@
     margin-left: 5px;
   }
 }
-@media(max-width: $tablet-width) {
+
+@media (max-width: $tablet-width) {
   .feedback__wrapper {
     padding: 67px 15px 70px;
   }
@@ -150,7 +163,7 @@
     padding-top: 10px;
   }
 
-  .feedback__author{
+  .feedback__author {
     width: 76px;
     font-size: 20px;
     line-height: 26px;
