--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -10,63 +10,23 @@
   @include font($font: $bebas, $size: 49px, $height: 49px);
 
   margin: 0;
-  margin-bottom: 55px;
   letter-spacing: 0.03em;
   color: $darkblue;
 }
 
 .feedback__list {
-  position: relative;
-  width: 560px;
-
   list-style: none;
   margin: 0;
-  padding: 0;
-  background: $lightblue;
-  box-shadow: 0 0 40px rgba(28, 51, 116, 0.2);
-}
-
-.feedback__slider-box {
-  position: relative;
-}
-
-.feedback__slider-btn {
-  position: absolute;
-  top: 50%;
-  width: 16px;
-  height: 32px;
-  content: "";
-  cursor: pointer;
-  background-size: 16px 32px;
-  background-repeat: no-repeat;
-  transform: translateY(-50%);
-  background-color: transparent;
-  border: none;
-
-  &--previous {
-    left: -57px;
-    background-image: url("../img/arrow-left.svg");
-  }
-
-  &--next {
-    right: -57px;
-    background-image: url("../img/arrow-right.svg");
-  }
 }
 
 .feedback__item {
-  display: flex;
-  justify-content: flex-end;
-  width: 100%;
-  min-height: 242px;
-  padding: 54px 60px;
+
 }
 
 .feedback__author {
   @include font($font: $robotoBold, $size: 20px, $height: 30px);
 
   display: block;
-  margin-bottom: 13px;
   color: $white;
 }
 
@@ -78,9 +38,7 @@
 }
 
 .feedback__avatar {
-  margin-right: auto;
-  margin-top: 8px;
-  margin-left: 2px;
+
 
   &-img {
     width: 80px;
@@ -88,15 +46,22 @@
   }
 }
 
-.feedback__box {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  width: 330px;
+.swiper-container {
+  width: 560px;
+  height: 100%;
 }
 
-.feedback__item--hidden {
-  display: none;
+.swiper-slide {
+  text-align: center;
+  background: $lightblue;
+}
+
+.swiper-button-next {
+
+}
+
+.swiper-button-prev {
+
 }
 
 @media (max-width: $desktop-width) {
