исправления футера, блок с контактами и слайдера с отзывами для ие

--- a/source/sass/blocks/additional.scss
+++ b/source/sass/blocks/additional.scss
@@ -9,7 +9,7 @@
 
 @media (max-width: $desktop-width) {
   .additional__wrapper {
-    @include container();
+    margin-left: 0 auto;
     flex-direction: column;
   }
 }
