--- a/source/sass/blocks/lesson.scss
+++ b/source/sass/blocks/lesson.scss
@@ -46,7 +46,7 @@
   border-radius: 0;
   border-bottom: 1px solid $blue-brd;
   margin-bottom: 28px;
-  padding: 5px;
+  padding: 5px 0;
   cursor: pointer;
   color: $white;
 
