--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -1,6 +1,7 @@
 .contacts {
   width: 50%;
   min-height: 337px;
+  border-top : 1px solid $blue-brd;
 }
 
 .contacts__wrapper {
@@ -104,6 +105,7 @@
   }
 
   .contacts__wrapper {
+    display: block;
     margin: 0 auto;
     padding-top: 65px;
     padding-bottom: 62px;
@@ -154,8 +156,13 @@
 }
 
 @media (max-width: $tablet-width) {
+  .contacts {
+    border-top: 0;
+  }
   .contacts__wrapper {
     padding-top: 67px;
+    max-width: 320px;
+    margin: 0 auto;
   }
 
   .contacts__content {
