--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -17,18 +17,14 @@
 
 .feedback__list {
   position: relative;
-  width: 560px;
-
   list-style: none;
   margin: 0;
   padding: 0;
-  box-shadow: 0 0 40px rgba(28, 51, 116, 0.2);
 }
 
 .feedback__item-wrapper {
   width: 560px;
   display: flex;
-  // padding: 54px 60px;
   background: $lightblue;
 }
 
@@ -37,6 +33,7 @@
   justify-content: center;
   width: 100%;
   min-height: 242px;
+  background-color: $white;
 }
 
 .feedback__content-box {
@@ -95,7 +92,6 @@
   background-color: transparent;
   border: none;
   margin-top: 0;
-
   color: transparent;
   background-image: url("../img/arrow-right.svg");
 }
@@ -113,7 +109,6 @@
   background-color: transparent;
   border: none;
   margin-top: 0;
-
   color: transparent;
   background-image: url("../img/arrow-left.svg");
 }
@@ -127,10 +122,6 @@
     font-size: 42px;
     line-height: 42px;
     margin-bottom: 43px;
-  }
-
-  .feedback__list {
-    width: 566px;
   }
 
   .feedback__box {
@@ -152,19 +143,24 @@
     line-height: 32px;
   }
 
-  .feedback__list {
-    width: 226px;
-    min-height: 335px;
-  }
-
   .feedback__item {
     position: relative;
-    padding: 40px 25px 35px;
+    padding:0;
+
+    &-wrapper {
+      width: 226px;
+    }
   }
 
   .feedback__box {
     margin-right: 0;
     padding-top: 10px;
+  }
+
+  .feedback__content-box {
+    width: 175px;
+    padding: 0;
+    margin: auto;
   }
 
   .feedback__author {
@@ -181,12 +177,24 @@
 
   .feedback__avatar {
     position: absolute;
-    top: 33px;
-    left: 37px;
+    top: 31px;
+    left: 68px;
 
     &-img {
       width: 68px;
       height: 68px;
     }
+  }
+
+  .feedback__slider-box.swiper-container {
+    width: 290px;
+    height: 335px;
+  }
+
+  .swiper-button-next,
+  .swiper-button-prev {
+    width: 10px;
+    height: 19px;
+    background-size: 10px 19px;
   }
 }
