--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -123,6 +123,10 @@
   }
 }
 
+.promo__image {
+  height: 500px;
+}
+
 .promo__img {
   max-width: 660px;
   height: 100%;
@@ -185,6 +189,10 @@
   .promo__time {
     font-size: 24px;
     line-height: 24px;
+  }
+
+  .promo__image {
+    height: 292px;
   }
 
   .promo__img {
