--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -4,6 +4,8 @@
 @import "global";
 @import "variables";
 @import "mixins";
+@import "swiper";
+@import "swiper-styles";
 
 // header
 @import "blocks/header";
