--- a/source/sass/blocks/coach.scss
+++ b/source/sass/blocks/coach.scss
@@ -1,11 +1,26 @@
 .coach__wrapper {
+  position: relative;
   @include container();
-
-  max-width: 1290px;
-  padding: 112px 65px 120px;
+  //padding: 0 20px;
+  max-width: 1270px;
+  padding: 0 55px;
+  //padding: 112px 65px 120px;
 }
 
-.coach__title {
+.coach__slider-item.swiper-slide {
+  width: 260px;
+
+  & picture {
+    width: 100%;
+    height: 100%;
+  }
+}
+
+.coach__img {
+  width: 100%;
+}
+
+/*.coach__title {
   @include font($font: $bebas, $size: 49px, $height: 49px);
 
   letter-spacing: 0.03em;
@@ -15,24 +30,21 @@
   color: $blue;
 }
 
+.coach__slider-box.swiper-container {
+  max-width: 1290px;
+}
+
 .coach__list {
-  position: relative;
-  display: flex;
-  flex-wrap: wrap;
   list-style: none;
   margin: 0;
   padding: 0;
+  width: calc(100% - 120px);
+  margin: auto;
 }
 
-.coach__item {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  position: relative;
-  width: 25%;
+.coach__item.swiper-slide {
   max-width: 260px;
   height: 294px;
-  overflow: hidden;
   margin-right: auto;
 
   &:nth-child(4n) {
@@ -40,22 +52,48 @@
   }
 }
 
-.coach__link {
-  text-decoration: none;
-  height: 100px;
+.coach__btn.swiper-button {
+  &-next {
+    right: 10px;
+    top: 49%x;
+  }
+
+  &-prev {
+    left: 10px;
+    top: 49%;
+  }
+}
+
+.coach__img {
+  width: 260px;
+  height: 294px;
 }
 
 .coach__name {
-  @include font($font: robotoBold, $size: 18px, $height: 27px);
+  @include font($font: $robotoBold, $size: 18px, $height: 27px);
 
   width: 100%;
   position: relative;
-  top: 79.6%;
+  top: 65.5%;
   margin: 0;
-  margin-bottom: 250px;
+  margin-bottom: 260px;
   text-align: center;
   color: $white;
   transition: margin-bottom 2s 0.1s, top 1.5s 0.1s;
+}
+
+.coach__info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding-top: 51px;
+  background-color: transparent;
+  transition: background-color 2s 0.1s;
 }
 
 .coach__info:hover,
@@ -68,24 +106,11 @@
   }
 }
 
-.coach__info {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  padding-top: 50px;
-  background-color: transparent;
-  transition: background-color 2s 0.1s;
-}
-
 .coach__advantages-list {
   width: 170px;
   list-style: none;
   margin: 0;
+  margin-left: 12px;
   padding: 0;
   padding-left: 10px;
 }
@@ -246,4 +271,4 @@
 
     margin-bottom: 45px;
   }
-}
+}*/
