--- a/source/sass/blocks/subscription.scss
+++ b/source/sass/blocks/subscription.scss
@@ -1,10 +1,12 @@
 .subscription {
-  position: relative;
+  background-color: $lightgrey;
+  min-height: 851px;
 }
 
 .subscription__wrapper {
   @include container();
-
+  min-height: inherit;
+  position: relative;
   padding: 116px 20px 120px;
   display: flex;
   flex-direction: column;
@@ -15,54 +17,46 @@
   @include font($font: $bebas, $size: 49px, $height: 49px);
 
   margin: 0;
-  margin-bottom: 37px;
+  margin-bottom: 34px;
   letter-spacing: 0.03em;
   color: $darkblue;
 }
 
 .subscription__toggle-box {
-  margin-bottom: 38px;
+    display: flex;
+    height: 46px;
+    margin-left: -3px;
+    margin-bottom: 38px;
+    border-bottom: 2px solid rgba(120, 120, 120, 0.2);
 }
 
-.subscription__toggle-list {
-  display: flex;
-  flex-wrap: wrap;
-  list-style: none;
-  margin: 0;
-  margin-bottom: 11px;
-  padding: 0;
-}
+input[type="radio"] {
+  height: 100%;
+  display: none;
 
-.subscription__toggle-link {
-  @include font($font: $roboto, $size: 20px, $height: 30px);
+  &:checked + label {
+    border-bottom: 2px solid $pink;
+  }
 
-  text-decoration: none;
-  margin-right: 45px;
-  color: rgba(16, 38, 84, 0.5);
-
-  &--active {
-    color: $blue;
+  &:checked + label + ul {
+    display: flex;
+    position: absolute;
+    bottom: 120px;
+    left: 0;
+    margin-left: 20px;
   }
 }
 
-.subscription__toggle-item:last-child a {
-  margin-right: 0;
-}
+.subscription__toggle-label {
+  @include font($font: $roboto, $size: 20px, $height: 36px);
 
-.subscription__toggle-line {
-  position: relative;
-  width: 100%;
-  height: 2px;
-  background-color: rgba(120, 120, 120, 0.2);
-}
+  cursor: pointer;
+  margin-right: 47px;
+  height: inherit;
 
-.subscription__toggle-pin {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 67px;
-  height: 100%;
-  background-color: $pink;
+  &:last-of-type {
+    margin-right: 0;
+  }
 }
 
 .subscription__list {
@@ -73,6 +67,10 @@
   list-style: none;
   margin: 0;
   padding: 0;
+
+  &--hidden {
+    display: none;
+  }
 }
 
 .subscription__item {
@@ -107,7 +105,6 @@
   flex-direction: column;
   align-items: center;
   min-height: 323px;
-  width: 203px;
 }
 
 .subscription__name {
@@ -147,7 +144,6 @@
     align-items: center;
     justify-content: center;
     width: 100%;
-    max-width: 166px;
     position: absolute;
     bottom: 50%;
     left: 50%;
@@ -158,7 +154,7 @@
 .subscription__small-price {
   @include font($font: $robotoBold, $size: 60px, $height: 90px);
 
-  margin-right: auto;
+  margin-right: 15px;
   color: $price;
 }
 
@@ -175,9 +171,7 @@
   text-align: center;
   padding: 25px 10px;
   color: $darkblue;
-
   transition: color 0.8s 0.1s;
-
 
   &:hover,
   &:focus {
@@ -195,22 +189,7 @@
   .subscription__title {
     font-size: 42px;
     line-height: 42px;
-    margin-bottom: 32px;
-  }
-
-  .subscription__toggle-box {
-    min-width: 332px;
-    margin-bottom: 45px;
-  }
-
-  .subscription__toggle-link {
-    font-size: 18px;
-    line-height: 27px;
-    margin-right: 55px;
-  }
-
-  .subscription__toggle-pin {
-    width: 60px;
+    margin-bottom: 27px;
   }
 
   .subscription__list {
@@ -227,6 +206,16 @@
       margin-bottom: 0;
     }
   }
+
+  .subscription__toggle-box {
+    margin-bottom: 45px;
+    margin-left: 2px;
+  }
+
+  .subscription__toggle-label {
+    font-size: 18px;
+    line-height: 27px;
+  }
 }
 
 @media (max-width: $tablet-width) {
@@ -237,12 +226,13 @@
   .subscription__title {
     font-size: 32px;
     line-height: 32px;
-    margin-bottom: 25px;
+    margin-bottom: 23px;
   }
 
   .subscription__toggle-box {
     min-width: 290px;
     margin-bottom: 35px;
+    height: 38px;
   }
 
   .subscription__toggle-link {
@@ -257,14 +247,15 @@
     margin-bottom: 23px;
 
     &-before {
-      max-width: 132px;
-      //transform: translate(-50%,57%);
+      bottom: 51%;
+      left: 51.5%;
     }
   }
 
   .subscription__small-price {
     font-size: 48px;
     line-height: 72px;
+    margin-right: 12px;
   }
 
   .subscription__rubble {
@@ -282,5 +273,10 @@
     min-height: 384px;
     margin-bottom: 35px;
     padding-top: 38px;
+  }
+
+  .subscription__toggle-label {
+    font-size: 16px;
+    line-height: 24px;
   }
 }
