--- a/source/sass/blocks/lesson.scss
+++ b/source/sass/blocks/lesson.scss
@@ -121,6 +121,7 @@
 
   .lesson__form input[type="text"] {
     width: 100%;
+    margin-bottom: 31px;
   }
 
   .lesson__input--name {
@@ -134,5 +135,6 @@
 
   .lesson__form input[type="submit"] {
     margin-bottom: 68px;
+    margin-top: 7px;
   }
 }
