--- a/source/sass/blocks/coach.scss
+++ b/source/sass/blocks/coach.scss
@@ -1,26 +1,18 @@
 .coach__wrapper {
   position: relative;
-  @include container();
-  //padding: 0 20px;
   max-width: 1270px;
+  margin: 0 auto;
   padding: 0 55px;
-  //padding: 112px 65px 120px;
+  margin-bottom: 120px;
 }
 
-.coach__slider-item.swiper-slide {
-  width: 260px;
-
-  & picture {
-    width: 100%;
-    height: 100%;
-  }
+.coach__title-wrapper {
+  @include container();
+  padding: 0 20px;
 }
 
-.coach__img {
-  width: 100%;
-}
+.coach__title {
 
-/*.coach__title {
   @include font($font: $bebas, $size: 49px, $height: 49px);
 
   letter-spacing: 0.03em;
@@ -30,43 +22,19 @@
   color: $blue;
 }
 
-.coach__slider-box.swiper-container {
-  max-width: 1290px;
-}
-
-.coach__list {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  width: calc(100% - 120px);
-  margin: auto;
-}
-
-.coach__item.swiper-slide {
-  max-width: 260px;
+.coach__slider-item.swiper-slide {
+  width: 260px;
   height: 294px;
-  margin-right: auto;
 
-  &:nth-child(4n) {
-    margin-right: 0;
-  }
-}
-
-.coach__btn.swiper-button {
-  &-next {
-    right: 10px;
-    top: 49%x;
-  }
-
-  &-prev {
-    left: 10px;
-    top: 49%;
+  & picture {
+    width: 100%;
+    height: 100%;
   }
 }
 
 .coach__img {
-  width: 260px;
-  height: 294px;
+  width: 100%;
+  height: 100%;
 }
 
 .coach__name {
@@ -150,46 +118,15 @@
   color: $grey;
 }
 
-.coach__item--hidden {
-  display: none;
-}
-
-.coach__slider-box {
-  position: relative;
-}
-
-.coach__slider-btn {
-  position: absolute;
-  top: 50%;
-  width: 16px;
-  height: 32px;
-  content: "";
-  cursor: pointer;
-  background-size: 16px 32px;
-  background-repeat: no-repeat;
-  transform: translateY(-50%);
-  background-color: transparent;
-  border: none;
-
-  &--previous {
-    left: -57px;
-    background-image: url("../img/arrow-left.svg");
-  }
-
-  &--next {
-    right: -57px;
-    background-image: url("../img/arrow-right.svg");
-  }
-}
-
 @media (max-width: $desktop-width) {
   .coach__wrapper {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding-top: 93px;
-    padding-bottom: 100px;
+    max-width: 676px;
+    margin-bottom: 100px;
+  }
+
+  .coach__title-wrapper {
+    @include container();
+    padding: 0 45px;
   }
 
   .coach__title {
@@ -197,73 +134,23 @@
 
     margin-bottom: 43px;
     margin-left: 0;
+    text-align: center;
   }
 
-  .coach__list {
-    min-width: 566px;
-  }
-
-  .coach__item {
-    width: 50%;
-    max-width: 268px;
-
-    &:nth-child(2n) {
-      margin: 0;
-    }
-  }
-
-  .coach__img {
+  .coach__slider-item.swiper-slide {
     width: 268px;
   }
 }
 
 @media (max-width: $tablet-width) {
   .coach__wrapper {
-    padding: 67px 45px 40px;
+    max-width: 290px;
+    padding: 0 32px;
+    margin-bottom: 70px;
   }
 
-  .coach__list {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    min-width: 226px;
-  }
-
-  .coach__slider-btn {
-    top: 47.2%;
-    width: 10px;
-    height: 19px;
-
-    &--previous {
-      background-size: 10px 19px;
-      left: -32px;
-    }
-
-    &--next {
-      background-size: 10px 19px;
-      right: -36px;
-    }
-  }
-
-  .coach__item {
-    width: 226px;
-    margin-right: 0;
-    max-width: 226px;
-    height: 274px;
-    margin-bottom: 20px;
-
-    &:nth-child(2n) {
-      margin-bottom: 20px;
-    }
-
-    &:last-child {
-      margin-bottom: 0;
-    }
-  }
-
-  .coach__img {
-    width: 226px;
-    height: 274px;
+  .coach__title-wrapper {
+    @include container();
   }
 
   .coach__title {
@@ -271,4 +158,9 @@
 
     margin-bottom: 45px;
   }
-}*/
+
+  .coach__slider-item.swiper-slide {
+    width: 226px;
+    height: 274px;
+  }
+}
