--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -11,6 +11,7 @@
   align-items: center;
   justify-content: center;
   margin-right: auto;
+  padding-top: 6px;
 }
 
 .contacts__content {
@@ -25,7 +26,7 @@
 
   margin: 0;
   letter-spacing: 0.03em;
-  margin-bottom: 45px;
+  margin-bottom: 43px;
   color: $darkblue;
 }
 
