--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -13,7 +13,7 @@
 .header__wrapper {
   @include container();
 
-  padding: 30px 20px;
+  padding: 27px 20px 30px;
 }
 
 .header__bar {
@@ -49,7 +49,7 @@
 
 .header__inner {
   display: flex;
-  margin-top: -4px;
+  margin-top: -2px;
 }
 
 .header__content-box {
@@ -155,7 +155,7 @@
   flex-direction: column;
   justify-content: flex-end;
   margin-left: auto;
-  padding-left: 5px;
+  margin-right: -2px;
 
   &-list {
     list-style: none;
@@ -167,7 +167,7 @@
     margin-bottom: 15px;
 
     &:last-child {
-      margin-bottom: 44px;
+      margin-bottom: 41px;
     }
   }
 
